[tool.poetry]
name = "cpf"
version = "0.1.0"
description = ""
authors = ["JeanSavary <jeansvy@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
pandas = "^1.5.2"
geopy = "^2.3.0"
streamlit = "^1.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
